# quant-factor-lab

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: pages.yml
api/: index.py  realtime-ws.js
docs/: DEFECTS.md  PRODUCTION_ROADMAP.md  SPEC.md
examples/: demo_config.json
public/: app.css  app.js
quant_factor_lab/: __init__.py  adjustments.py  backtest.py  cli.py  data.py  decisions.py  derivatives.py  evaluation.py  factors.py  microstructure.py  mining.py  onchain.py  pipeline.py  quality.py  raw_store.py  realtime.py  run_store.py  runtime.py  signals.py  site_export.py  source_health.py  technicals.py  types.py  validation.py
quant_factor_lab/admin/: __init__.py  server.py
quant_factor_lab/admin/static/: app.css  app.js  index.html  runtime-config.js
tests/: realtime_ws.test.mjs  test_admin.py  test_core.py  test_raw_store.py  test_realtime.py  test_run_store.py  test_site_export.py  test_vercel_api.py
vercel/: realtime-ws-core.js
